# tracing-opentelemetry-setup

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: builder.rs  datadog.rs  layer.rs  lib.rs  panic.rs  propagation.rs
tests/: tests.rs
