[package]
name = "tracing-opentelemetry-setup"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "Utilities to provide proper setup of tracing with OTEL export"
readme = "README.md"
repository = "https://github.com/DoumanAsh/tracing-opentelemetry-setup"
license = "BSL-1.0"
keywords = ["tracing", "opentelemetry"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.tracing]
version = "0.1"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.22"
default-features = false

[dependencies.tracing-opentelemetry]
version = "0.32"
default-features = false

[dependencies.opentelemetry-appender-tracing]
version = "0.31"
default-features = false

[dependencies.opentelemetry]
version = "0.31"
default-features = false

[dependencies.opentelemetry_sdk]
version = "0.31"
default-features = false
features = ["logs", "trace"]

[dependencies.opentelemetry-otlp]
version = "0.31"
default-features = false
features = ["logs", "trace"]

[dependencies.tonic]
version = "0.14"
default-features = false
optional = true

[dependencies.metrics-opentelemetry]
version = "0.24"
optional = true

[dependencies.http]
version = "1"
default-features = false
optional = true

# Datadog related deps
[dependencies.serde]
version = "1"
default-features = false
optional = true

[dependencies.opentelemetry-datadog]
version = "0.19"
default-features = false
optional = true
features = ["intern-ahash", "reqwest-client"]

[dependencies.time]
version = "0.3"
default-features = false
optional = true
features = ["formatting"]

[dependencies.serde_json]
version = "1"
default-features = false
features = ["std"]
optional = true

[features]
# Enables panic hook
panic = []
# Enables propagation utilities
propagation = []
# Enables metrics propagation via metrics crate
metrics = ["opentelemetry_sdk/metrics", "opentelemetry-otlp/metrics", "metrics-opentelemetry"]
# Enables metrics propagation via tracing-opentelemetry crate
tracing-metrics = ["opentelemetry_sdk/metrics", "opentelemetry-otlp/metrics", "tracing-opentelemetry/metrics"]
# Specifies you want to use tokio runtime
rt-tokio = ["opentelemetry_sdk/rt-tokio"]

# non-standard exporters
datadog = ["serde", "time", "serde_json", "opentelemetry-datadog"]

# gRPC transport features
grpc = ["opentelemetry-otlp/grpc-tonic", "tonic"]
grpc-compression = ["grpc", "opentelemetry-otlp/gzip-tonic"]
grpc-tls = ["grpc", "opentelemetry-otlp/tls-roots"]

# HTTP transport features
http = ["opentelemetry-otlp/http-proto", "dep:http"]
http-compression = ["http", "opentelemetry-otlp/gzip-http"]
http-tls = ["http", "opentelemetry-otlp/reqwest-rustls"]

# HTTP client selection
http-reqwest-blocking = ["http", "opentelemetry-otlp/reqwest-blocking-client"]
http-reqwest = ["http", "opentelemetry-otlp/reqwest-client"]
http-hyper = ["http", "opentelemetry-otlp/hyper-client"]

[package.metadata.docs.rs]
features = ["metrics", "grpc", "http", "propagation", "panic", "datadog"]
